[package]
name = "adventofcode-2019"
version = "0.1.0"
authors = ["Jacob Mischka <jacob@mischka.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.2.0", features = ["unstable"] }
hashed-permutation = "2.1.1"
permute = "0.1.0"
futures = "0.3.1"
regex = "1.3.1"
lazy_static = "1.4.0"
rustbox = "0.11.0"
serde = { version = "1.0.103", features = ["derive"] }
clap = "2.33.0"

[features]
default = ["slowgamemode"]
debug = []
slowgamemode = []
